k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: syncpad
  labels:
    name: syncpad
    app.kubernetes.io/name: syncpad
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
